# pitchbook-companies-scraper

./: LICENSE  README.md  pyproject.toml  requirements.txt
data/: inputs.sample.txt  sample_output.json
src/: main.py  runner.py
src/clients/: pitchbook_client.py
src/config/: settings.example.json
src/extractors/: company_profile_parser.py  competitors_parser.py  faq_parser.py  investments_parser.py
src/models/: company_profile.py  investment_record.py
src/outputs/: exporters.py  schema_validator.py
src/utils/: http.py  logging_utils.py  rate_limiter.py
tests/: test_client.py  test_parsers.py  test_schema.py
