[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pitchbook-companies-scraper"
version = "0.1.0"
description = "Extract rich company intelligence from PitchBook company profile pages."
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "jsonschema>=4.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
pitchbook-scraper = "src.runner:main"